--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -11,7 +11,7 @@
     <h1>This is my Alx Test Page</h1>
     <h2>h2</h2>
     <h3>h3</h3>
-    <P>ziad,"dropping the mic and walking away"</P>
+    <p>ziad,"dropping the mic and walking away"</p>
     <p>p2</p>
     <p>p3</p>
     <p>p4</p>
