--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -17,7 +17,7 @@
     <p>p4</p>
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
     <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Israel will go home. Palestine will stay. <a href="https://twitter.com/hashtag/FreePalestine?src=hash&amp;ref_src=twsrc%5Etfw">#FreePalestine</a></p>&mdash; #FreePalestine (@FreePalestine) <a href="https://twitter.com/FreePalestine/status/1811482684251947456?ref_src=twsrc%5Etfw">July 11, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    
+    <a href="file:///Z:/html_basic/index.html"></a>
 </body>
 
 </html>
