--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,14 +8,21 @@
 </head>
 
 <body>
+    <header>
     <h1>This is my Alx Test Page</h1>
+    </header>
+    <main>
     <h2>h2</h2>
     <h3>h3</h3>
     <p>ziad,"dropping the mic and walking away"</p>
     <p>p2</p>
     <p>p3</p>
     <p>p4</p>
-    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
+    </main>
+
+    <footer>
+        <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
+    </footer>
 </body>
 
 </html>
