--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,21 +8,17 @@
 </head>
 
 <body>
-    <header>
+    <header></header>
+    <main></main>
     <h1>This is my Alx Test Page</h1>
-    </header>
-    <main>
     <h2>h2</h2>
     <h3>h3</h3>
     <p>ziad,"dropping the mic and walking away"</p>
     <p>p2</p>
     <p>p3</p>
     <p>p4</p>
-    </main>
-
-    <footer>
-        <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
-    </footer>
+<a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
+    <footer></footer>
 </body>
 
 </html>
