--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,6 +5,7 @@
     <title>Alx Test Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
+    <a href="index.html"></a>
 </head>
 
 <body>
