--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <header></header>
+    <main></main>
     <h1>This is my Alx Test Page</h1>
     <h2>h2</h2>
     <h3>h3</h3>
@@ -19,6 +21,7 @@
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
     <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Israel will go home. Palestine will stay. <a href="https://twitter.com/hashtag/FreePalestine?src=hash&amp;ref_src=twsrc%5Etfw">#FreePalestine</a></p>&mdash; #FreePalestine (@FreePalestine) <a href="https://twitter.com/FreePalestine/status/1811482684251947456?ref_src=twsrc%5Etfw">July 11, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <a href="file:///Z:/html_basic/index.html"></a>
+    <footer></footer>
 </body>
 
 </html>
