--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -10,7 +10,10 @@
 
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <article></article>
+        <aside></aside>
+    </main>
     <h1>This is my Alx Test Page</h1>
     <h2>h2</h2>
     <h3>h3</h3>
@@ -21,7 +24,7 @@
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
     <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Israel will go home. Palestine will stay. <a href="https://twitter.com/hashtag/FreePalestine?src=hash&amp;ref_src=twsrc%5Etfw">#FreePalestine</a></p>&mdash; #FreePalestine (@FreePalestine) <a href="https://twitter.com/FreePalestine/status/1811482684251947456?ref_src=twsrc%5Etfw">July 11, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <a href="file:///Z:/html_basic/index.html"></a>
-    <footer></footer>
+    <footer>Made by Ziad Sadek <a href="https://www.instagram.com/ziad.sadek8/?hl=en target="_blank">here</footer>
 </body>
 
 </html>
