--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,7 +12,7 @@
     <header></header>
     <main>
         <article></article>
-        <aside>placeholder</aside>
+        <aside>placeholder to add comment thread later</aside>
     </main>
     <h1>This is my Alx Test Page</h1>
     <h2>h2</h2>
