--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -12,7 +12,7 @@
     <header></header>
     <main>
         <article></article>
-        <aside></aside>
+        <aside>placeholder to add comment thread later</aside>
     </main>
     <h1>This is my Alx Test Page</h1>
     <h2>h2</h2>
@@ -24,7 +24,8 @@
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
     <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Israel will go home. Palestine will stay. <a href="https://twitter.com/hashtag/FreePalestine?src=hash&amp;ref_src=twsrc%5Etfw">#FreePalestine</a></p>&mdash; #FreePalestine (@FreePalestine) <a href="https://twitter.com/FreePalestine/status/1811482684251947456?ref_src=twsrc%5Etfw">July 11, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <a href="file:///Z:/html_basic/index.html"></a>
-    <footer>Made by Ziad Sadek <a href="https://www.instagram.com/ziad.sadek8/?hl=en target="_blank">here</footer>
+    <footer>Made by Ziad Sadek - <a href="https://www.instagram.com/ziad.sadek8/?hl=en target="_blank">here</footer>
 </body>
 
 </html>
+                                     
