--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <ul>
+                <li> <a href="index.html"></a> </li>
+                <li> <a href="tweets.html"> </li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <article></article>
         <aside>placeholder to add comment thread later</aside>
