--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <article></article>
+        <article>twitter-tweet</article>
         <aside>placeholder to add comment thread later</aside>
     </main>
     <h1>This is my Alx Test Page</h1>
