--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -18,7 +18,13 @@
         </nav>
     </header>
     <main>
-        <article></article>
+        <article>
+            <table>
+                <thead>Name</thead>
+                <thead>Age</thead>
+                <thead>Country</thead>
+            </table>
+        </article>
         <aside>placeholder to add comment thread later</aside>
     </main>
     <h1>This is my Alx Test Page</h1>
