--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li> <a href="index.html"></a> </li>
-                <li> <a href="tweets.html"> </li>
+                <li> <a href="tweets.html"></a> </li>
             </ul>
         </nav>
     </header>
@@ -21,8 +21,20 @@
         <article>
             <table>
                 <thead>Name</thead>
+                <tbody>John</tbody>
+                <tbody>Emily</tbody>
+                <tbody>Michael</tbody>
+                <tbody>Sophia</tbody>
                 <thead>Age</thead>
+                <tbody>25</tbody>
+                <tbody>28</tbody>
+                <tbody>32</tbody>
+                <tbody>21</tbody>
                 <thead>Country</thead>
+                <tbody>USA</tbody>      
+                <tbody>Canada</tbody>   
+                <tbody>Australia</tbody>
+                <tbody>UK</tbody>
             </table>
         </article>
         <aside>placeholder to add comment thread later</aside>
@@ -41,3 +53,5 @@
 </body>
 
 </html>
+
+
