--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>Alx Test Page</title>
-    <meta charset="UTF-8">
+    <title>Ziad Sadek - Personal Portfolio</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <a href="index.html"></a>
 </head>
