--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -11,13 +11,47 @@
 <body>
     <header>
         <nav>
+            <section>
+                <h1>Ziad Sadek</h1>
+                <p> brief tagline </p>
             <ul>
                 <li> <a href="index.html"></a> </li>
                 <li> <a href="tweets.html"></a> </li>
+                <li> <a href="#Introduction">Introduction</a> </li>
+                <li> <a href="#Projects">Projects</a> </li>
+                <li> <a href="#About">About Me</a> </li>
+                <li> <a href="#Contact">Contact</a> </li> 
             </ul>
+            </section>
         </nav>
     </header>
     <main>
+        <section id="Introduction">
+            <h2>Introduction</h2>
+            <p>Hey, This is Ziad Sadek a player of the national team of Egypt </p>
+        </section>
+        <section id="Projects">
+            <h2>Projects</h2>
+            <article>
+                <h3>First Project</h3>
+                <p>This is my frist project</p>
+                <a href="#Projects" target="_blank">Check it out</a>
+            </article>
+        </section>
+        <sectiot id="About">
+            <h2>About Me</h2>
+            <p>
+                <ul>
+                    <li>Cycling</li>
+                    <li>Gym</li>
+                </ul>
+            </p>
+        </sectiot>
+        <section id="Contact">
+            <h2>Contact</h2>
+            <a href="mailto:zezo.sadek88@gmail.com" target="_blank">E-Mail</a>
+
+        </section>
         <article>
             <table>
                 <thead>Name</thead>
@@ -49,9 +83,9 @@
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
     <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Israel will go home. Palestine will stay. <a href="https://twitter.com/hashtag/FreePalestine?src=hash&amp;ref_src=twsrc%5Etfw">#FreePalestine</a></p>&mdash; #FreePalestine (@FreePalestine) <a href="https://twitter.com/FreePalestine/status/1811482684251947456?ref_src=twsrc%5Etfw">July 11, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <a href="file:///Z:/html_basic/index.html"></a>
-    <footer>Made by Ziad Sadek - <a href="https://www.instagram.com/ziad.sadek8/?hl=en target="_blank">here</footer>
+    <footer>Made by Ziad Sadek - <a href="https://www.instagram.com/ziad.sadek8/?hl=en target="_blank">here</a>
+        <p> &copy; 2024 Ziad Sadek</p>
+    </footer>
 </body>
 
 </html>
-
-
