--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,28 +17,28 @@
             <ul>
                 <li> <a href="index.html"></a> </li>
                 <li> <a href="tweets.html"></a> </li>
-                <li> <a href="#Introduction">Introduction</a> </li>
-                <li> <a href="#Projects">Projects</a> </li>
-                <li> <a href="#About">About Me</a> </li>
-                <li> <a href="#Contact">Contact</a> </li> 
+                <li> <a href="#introduction">Introduction</a> </li>
+                <li> <a href="#projects">Projects</a> </li>
+                <li> <a href="#about">About Me</a> </li>
+                <li> <a href="#contact">Contact</a> </li> 
             </ul>
             </section>
         </nav>
     </header>
     <main>
-        <section id="Introduction">
+        <section id="introduction">
             <h2>Introduction</h2>
             <p>Hey, This is Ziad Sadek a player of the national team of Egypt </p>
         </section>
-        <section id="Projects">
+        <section id="projects">
             <h2>Projects</h2>
             <article>
                 <h3>First Project</h3>
                 <p>This is my frist project</p>
-                <a href="#Projects" target="_blank">Check it out</a>
+                <a href="#projects" target="_blank">Check it out</a>
             </article>
         </section>
-        <sectiot id="About">
+        <sectiot id="about">
             <h2>About Me</h2>
             <p>
                 <ul>
@@ -47,7 +47,7 @@
                 </ul>
             </p>
         </sectiot>
-        <section id="Contact">
+        <section id="contact">
             <h2>Contact</h2>
             <a href="mailto:zezo.sadek88@gmail.com" target="_blank">E-Mail</a>
 
