--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,7 +38,7 @@
                 <a href="#projects" target="_blank">Check it out</a>
             </article>
         </section>
-        <sectiot id="about">
+        <section id="about">
             <h2>About Me</h2>
             <p>
                 <ul>
@@ -46,7 +46,7 @@
                     <li>Gym</li>
                 </ul>
             </p>
-        </sectiot>
+        </section>
         <section id="contact">
             <h2>Contact</h2>
             <a href="mailto:zezo.sadek88@gmail.com" target="_blank">E-Mail</a>
@@ -89,3 +89,5 @@
 </body>
 
 </html>
+
+
