linking index.html to base and styles .css files

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <a href="index.html"></a>
+    <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
