--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -10,7 +10,7 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="works_on_smartphone" >
     <header>
         <nav>
             <section>
