--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -17,6 +17,7 @@
                 <h1>Ziad Sadek</h1>
                 <p> brief tagline </p>
             <ul>
+                <li class:logo;>&#8484;</li>
                 <li> <a href="index.html"></a> </li>
                 <li> <a href="tweets.html"></a> </li>
                 <li> <a href="#Introduction">Introduction</a> </li>
