--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -57,21 +57,33 @@
         </section>
         <article>
             <table>
-                <thead>Name</thead>
-                <tbody>John</tbody>
-                <tbody>Emily</tbody>
-                <tbody>Michael</tbody>
-                <tbody>Sophia</tbody>
-                <thead>Age</thead>
-                <tbody>25</tbody>
-                <tbody>28</tbody>
-                <tbody>32</tbody>
-                <tbody>21</tbody>
-                <thead>Country</thead>
-                <tbody>USA</tbody>      
-                <tbody>Canada</tbody>   
-                <tbody>Australia</tbody>
-                <tbody>UK</tbody>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>Emily</td>
+                        <td>Michael</td>
+                        <td>Sophia</td>
+                    </tr>
+                    <tr>
+                        <td>25</td>
+                        <td>28</td>
+                        <td>32</td>
+                        <td>21</td>
+                    </tr>
+                    <tr>
+                        <td>USA</td>      
+                        <td>Canada</td>   
+                        <td>Australia</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
             </table>
         </article>
         <aside>placeholder to add comment thread later</aside>
